# PuriPuly-heart-vr

./: .all-contributorsrc  .gitignore  AGENTS.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  build.spec  installer.iss  package.json  pyproject.toml
.github/: release-template.md
.github/workflows/: ci.yml  deploy-broker-direct.yml  maintenance-broker-d1-cleanup.yml  push-ci.yml  release.yml
agents/logs/: 2026-03-29-batch8-rust-overlay.md  2026-03-29-task20-overlay-lifecycle.md  2026-03-29-task25a-overlay-presentation-l2.md  2026-04-04-commit-verification.md  2026-04-04-overlay-finding-fix-l2.md  2026-04-04-overlay-two-slot-static-caption-design-l0.md  2026-04-04-overlay-two-slot-static-caption-design-main-sync-l0.md  2026-04-04-overlay-two-slot-static-caption-design-ownership-alignment-l0.md  2026-04-04-overlay-two-slot-static-caption-design-peer-alignment-l0.md  2026-04-04-overlay-two-slot-static-caption-implementation-l3.md  2026-04-04-overlay-two-slot-static-caption-plan-l0.md  2026-04-06-installer-temp-dir-guard.md  (+43 more)
broker/: README.md  package.json  wrangler.jsonc
docs/: adr-2026-04-13-openrouter-fallback-source-lock-and-managed-key-contract.md  codex-subagent-usage.md
native/overlay/: Cargo.toml
native/overlay/src/: bridge.rs  lib.rs  logging.rs  main.rs  manifest.rs  openvr.rs  renderer.rs  runtime.rs  state.rs
native/overlay/src/renderer/: backend.rs  cache.rs  glyph_run.rs  layout.rs  mod.rs  types.rs
native/overlay/tests/: renderer.rs  runtime.rs  state.rs
prompts/: gemini.md  openrouter.md  qwen.md  translation_prompt.md
(+262 files in other folders)
