[package]
name = "puripuly-heart-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "puripuly_heart_overlay"
path = "src/lib.rs"

[[bin]]
name = "PuriPulyHeartOverlay"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
